# bubble

./: .gitignore  CLAUDE.md  Cargo.toml  bubble-SPEC.md
.claude/: launch.json
.github/workflows/: ci.yml
book/: STATUS.md  astro.config.mjs  mdx-components.tsx  next.config.mjs  package-lock.json  package.json
book/.astro/: content-modules.mjs  data-store.json  settings.json
book/app/: globals.css  layout.tsx  page.module.css  page.tsx
book/app/[[...mdxPath]]/: page.tsx
book/app/docs/: layout.tsx
book/app/docs/[[...mdxPath]]/: page.tsx
book/content/: _meta.ts  ch01-repl.mdx
book/content/docs/: _meta.ts  ch01-repl.mdx  index.mdx
book/src/components/: AgentLoopAnimation.tsx  ProjectCard.tsx  README.md  ReplCycleAnimation.tsx
book/src/content/docs/: ch01-repl.mdx  index.mdx
bubble/: Cargo.toml
bubble/src/: config.rs  lib.rs  llm.rs  main.rs  tools.rs
crates/context/: Cargo.toml  README.md
crates/context/src/: lib.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: lib.rs
crates/evolution/: Cargo.toml  README.md
crates/evolution/src/: lib.rs
crates/harness/: Cargo.toml  README.md
crates/harness/src/: lib.rs
crates/memory/: Cargo.toml  README.md
crates/memory/src/: lib.rs
crates/providers/: Cargo.toml  README.md
crates/providers/src/: lib.rs
crates/tools/: Cargo.toml  README.md
crates/tools/src/: lib.rs
docs/: architecture-roadmap.md  progress.md
skills/: rust.md
src/: skills.rs
