[package]
name = "bubble"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
providers = ["dep:bubble-providers"]
tools = ["dep:bubble-tools"]
context = ["dep:bubble-context"]
memory = ["dep:bubble-memory"]
evolution = ["dep:bubble-evolution"]
harness = ["dep:bubble-harness"]

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true

bubble-core = { path = "../crates/core" }
bubble-providers = { path = "../crates/providers", optional = true }
bubble-tools = { path = "../crates/tools", optional = true }
bubble-context = { path = "../crates/context", optional = true }
bubble-memory = { path = "../crates/memory", optional = true }
bubble-evolution = { path = "../crates/evolution", optional = true }
bubble-harness = { path = "../crates/harness", optional = true }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["prepush-hook", "run-for-all", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]

[lints]
workspace = true
